# clise

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  deny.toml  dev.sh  install.sh
.github/workflows/: ci.yml  dependabot.yml  dependency-graph.yml  pr-lint.yml  release.yml  rust-lint.yml  rust-security.yml  rust-tests.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/commands/: format.rs  init.rs  mod.rs  schema.rs  validate.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: action.rs  comment.rs  config.rs  diagnostic.rs  edit.rs  flatten.rs  format.rs  lib.rs  navigate.rs  node.rs  render.rs  schema.rs  schema_util.rs  state.rs  theme.rs  tooltip.rs  util.rs
docs/: command.md  guide.md  reference.md
tests/: README.md  lib.sh  run_tui.sh
tests/backends/: tu.sh
tests/cases/array/: c2_1.case  c2_2.case  c3_2.case  c3_3.case  c4_2.case  c4_3_move_disabled.case  c5_1.case  c5_3.case  c9_toparray.case
tests/cases/leaf/: l8_9.case  l_ex1.case  l_ex2.case  l_ex5a.case  l_ex5b.case
tests/cases/object/: o3_2.case  o5_2.case  o_del_disabled.case  o_dupkey.case  o_ex1.case  o_ex2.case  o_ex3.case  o_readd_value.case
tests/cases/tui/: f_ex1.case  f_ex2.case  f_ex3.case
tests/fixtures/: c2_2.yaml  c3_precomment.yaml  del_mid.yaml  l1.jsonc  l8_2.jsonc  o1.yaml  o_comment.yaml  schema.json
