[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.dependencies]
ratatui = { version = "=0.30.2", features = ["crossterm_0_29"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = { version = "=1.0.151", features = ["preserve_order"] }
serde-saphyr = "=0.0.29"
toml = "=1.1.3"
toml_edit = "=0.25.13"
thiserror = "=2.0.19"
