[dependencies]
crossterm = "=0.29.0"
md5 = "=0.7.0"
tui-input = "=0.15.3"
unicode-width = "=0.2.2"

[dependencies.directories]
optional = true
version = "=6.0.0"

[dependencies.jsonschema]
optional = true
version = "=0.46.5"

[dependencies.ratatui]
workspace = true

[dependencies.reqwest]
features = ["json", "default-tls"]
optional = true
version = "=0.13.4"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde-saphyr]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.toml]
workspace = true

[dependencies.toml_edit]
workspace = true

[features]
default = []
schema = [
    "dep:reqwest",
    "dep:directories",
    "dep:jsonschema",
]

[package]
edition = "2024"
name = "clise"
version = "0.1.1"
license = "MIT"
description = "Core library for clise CLI/TUI utility"
readme = "README.md"

[dev-dependencies]
tokio = { version = "=1.52.3", features = ["full"] }
